--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h2>Singapore</h2>
 
   <div class="singapore">
-    <img class="singapore_img" src="https://rccl-h.assetsadobe.com/is/image/content/dam/royal/ports-and-destinations/destinations/singapore/singapore-supertree-garden-by-the-bay-night.jpg?$750x667$">
+    <img class="singapore_img" src="https://rccl-h.assetsadobe.com/is/image/content/dam/royal/ports-and-destinations/destinations/singapore/singapore-supertree-garden-by-the-bay-night.jpg?$750x667$" alt="place in singapore">
   </div>
 
   <h2>Jamaica</h2>
