--- a/snippet.html
+++ b/snippet.html
@@ -2,3 +2,21 @@
   Want to search the web?
   Try <a href="https://google.com" id="the-best-link" class="banana"  target="_blank">Google</a>!
 </p>
+
+The tags in the snippet HTML above are: p and a.
+
+References:
+https://www.w3docs.com/learn-html/html-p-tag.html
+https://www.w3schools.com/tags/tag_a.asp
+
+The a tag is a child of the p tag. Whatever is put in the p tag is displayed on the site.
+
+The opening p is to start the paragraph on the page. The closing p with the forward slash ends the paragraph on the page.
+
+The opening a is to start the process of adding a hyperlink on the page. The closing a with the forward slash ends the hyperlink process on the page.
+
+The attribute names in the snippet HTML above are: href, id, class, and target.
+
+The value for the class attribute is banana. The value for the href attribute is https://google.com. The value for the id attribute is the-best-link. The value for the target attribute is _blank.
+
+The class attribute links to a class name in a stylesheet. The href attribute makes sure the URL of the page is linked to the site. The id attribute clarafies a the id for an element. The target attribute clarafies where to open the link or form.
