--- a/basic-tags.html
+++ b/basic-tags.html
@@ -30,14 +30,73 @@ Go buy <code>to purchase something</code> groceries!
   <li>Grilled Chicken</li>
 </ul>
 <ol>
-
+  <li>Mangos</li>
+  <li>Watermelon</li>
+  <li><a href="https://i5.walmartimages.com/asr/08d020f8-302e-4f8b-aec5-fce308e017c0_1.c83dafaa300ff5a6317c4e337cbf68f3.jpeg" id="groceries" class="bacon">Turkey Bacon</a></li>
+  <li>Bread</li>
 </ol>
+<ul>
+  <li>Coffee</li>
+  <li>Tea
+    <ul>
+      <li>Peach tea</li>
+      <li>Green tea</li>
+    </ul>
+  </li>
+  <li>Milk</li>
+</ul>
 <table>
-<th>
-
-</th>
+  <tr>
+    <th>Weekday</th>
+    <th>Homework</th>
+  </tr>
+  <tr>
+    <td>Monday</td>
+    <td>Write new vocab and definitions.</td>
+  </tr>
+  <tr>
+    <td>Tuesday</td>
+    <td>Work on problem set.</td>
+  </tr>
+  <tr>
+    <td>Wednesday</td>
+    <td>Write my midterm essay.</td>
+  </tr>
+  <tr>
+    <td>Thursday</td>
+    <td>Read chapter 6 for next class.</td>
+  </tr>
+  <tr>
+    <td>Friday</td>
+    <td>Go walk 2 miles on the track.</td>
+  </tr>
 </table>
-
+<table>
+  <tr>
+    <th>Month</th>
+    <th>Savings</th>
+    <th>Spending</th>
+  </tr>
+  <tr>
+    <td>January</td>
+    <td>$100</td>
+    <td>$50</td>
+  </tr>
+</table>
+<table>
+  <tr>
+    <th>Month</th>
+    <th>Savings</th>
+    <th>Spending</th>
+    <th>Remaining Balance</th>
+  </tr>
+  <tr>
+    <td>January</td>
+    <td>$100</td>
+    <td>$50</td>
+    <td>$150</td>
+  </tr>
+</table>
 </section>
 
 <section>
@@ -64,14 +123,73 @@ Go buy <code>to purchase something</code> groceries!
     <li>Grilled Chicken</li>
   </ul>
   <ol>
-
+    <li>Mangos</li>
+    <li>Watermelon</li>
+    <li><a href="https://i5.walmartimages.com/asr/08d020f8-302e-4f8b-aec5-fce308e017c0_1.c83dafaa300ff5a6317c4e337cbf68f3.jpeg" id="groceries" class="bacon">Turkey Bacon</a></li>
+    <li>Bread</li>
   </ol>
+  <ul>
+    <li>Coffee</li>
+    <li>Tea
+      <ul>
+        <li>Peach tea</li>
+        <li>Green tea</li>
+      </ul>
+    </li>
+    <li>Milk</li>
+  </ul>
   <table>
-  <th>
-
-  </th>
+    <tr>
+      <th>Weekday</th>
+      <th>Homework</th>
+    </tr>
+    <tr>
+      <td>Monday</td>
+      <td>Write new vocab and definitions.</td>
+    </tr>
+    <tr>
+      <td>Tuesday</td>
+      <td>Work on problem set.</td>
+    </tr>
+    <tr>
+      <td>Wednesday</td>
+      <td>Write my midterm essay.</td>
+    </tr>
+    <tr>
+      <td>Thursday</td>
+      <td>Read chapter 6 for next class.</td>
+    </tr>
+    <tr>
+      <td>Friday</td>
+      <td>Go walk 2 miles on the track.</td>
+    </tr>
   </table>
-
+  <table>
+    <tr>
+      <th>Month</th>
+      <th>Savings</th>
+      <th>Spending</th>
+    </tr>
+    <tr>
+      <td>January</td>
+      <td>$100</td>
+      <td>$50</td>
+    </tr>
+  </table>
+  <table>
+    <tr>
+      <th>Month</th>
+      <th>Savings</th>
+      <th>Spending</th>
+      <th>Remaining Balance</th>
+    </tr>
+    <tr>
+      <td>January</td>
+      <td>$100</td>
+      <td>$50</td>
+      <td>$150</td>
+    </tr>
+  </table>
   </section>
 
   <section>
@@ -98,14 +216,73 @@ Go buy <code>to purchase something</code> groceries!
       <li>Grilled Chicken</li>
     </ul>
     <ol>
-
+      <li>Mangos</li>
+      <li>Watermelon</li>
+      <li><a href="https://i5.walmartimages.com/asr/08d020f8-302e-4f8b-aec5-fce308e017c0_1.c83dafaa300ff5a6317c4e337cbf68f3.jpeg" id="groceries" class="bacon">Turkey Bacon</a></li>
+      <li>Bread</li>
     </ol>
+    <ul>
+      <li>Coffee</li>
+      <li>Tea
+        <ul>
+          <li>Peach tea</li>
+          <li>Green tea</li>
+        </ul>
+      </li>
+      <li>Milk</li>
+    </ul>
     <table>
-    <th>
-
-    </th>
+      <tr>
+        <th>Weekday</th>
+        <th>Homework</th>
+      </tr>
+      <tr>
+        <td>Monday</td>
+        <td>Write new vocab and definitions.</td>
+      </tr>
+      <tr>
+        <td>Tuesday</td>
+        <td>Work on problem set.</td>
+      </tr>
+      <tr>
+        <td>Wednesday</td>
+        <td>Write my midterm essay.</td>
+      </tr>
+      <tr>
+        <td>Thursday</td>
+        <td>Read chapter 6 for next class.</td>
+      </tr>
+      <tr>
+        <td>Friday</td>
+        <td>Go walk 2 miles on the track.</td>
+      </tr>
     </table>
-
+    <table>
+      <tr>
+        <th>Month</th>
+        <th>Savings</th>
+        <th>Spending</th>
+      </tr>
+      <tr>
+        <td>January</td>
+        <td>$100</td>
+        <td>$50</td>
+      </tr>
+    </table>
+    <table>
+      <tr>
+        <th>Month</th>
+        <th>Savings</th>
+        <th>Spending</th>
+        <th>Remaining Balance</th>
+      </tr>
+      <tr>
+        <td>January</td>
+        <td>$100</td>
+        <td>$50</td>
+        <td>$150</td>
+      </tr>
+    </table>
     </section>
 
     <section>
@@ -132,14 +309,73 @@ Go buy <code>to purchase something</code> groceries!
         <li>Grilled Chicken</li>
       </ul>
       <ol>
-
+        <li>Mangos</li>
+        <li>Watermelon</li>
+        <li><a href="https://i5.walmartimages.com/asr/08d020f8-302e-4f8b-aec5-fce308e017c0_1.c83dafaa300ff5a6317c4e337cbf68f3.jpeg" id="groceries" class="bacon">Turkey Bacon</a></li>
+        <li>Bread</li>
       </ol>
+      <ul>
+        <li>Coffee</li>
+        <li>Tea
+          <ul>
+            <li>Peach tea</li>
+            <li>Green tea</li>
+          </ul>
+        </li>
+        <li>Milk</li>
+      </ul>
       <table>
-      <th>
-
-      </th>
+        <tr>
+          <th>Weekday</th>
+          <th>Homework</th>
+        </tr>
+        <tr>
+          <td>Monday</td>
+          <td>Write new vocab and definitions.</td>
+        </tr>
+        <tr>
+          <td>Tuesday</td>
+          <td>Work on problem set.</td>
+        </tr>
+        <tr>
+          <td>Wednesday</td>
+          <td>Write my midterm essay.</td>
+        </tr>
+        <tr>
+          <td>Thursday</td>
+          <td>Read chapter 6 for next class.</td>
+        </tr>
+        <tr>
+          <td>Friday</td>
+          <td>Go walk 2 miles on the track.</td>
+        </tr>
       </table>
-
+      <table>
+        <tr>
+          <th>Month</th>
+          <th>Savings</th>
+          <th>Spending</th>
+        </tr>
+        <tr>
+          <td>January</td>
+          <td>$100</td>
+          <td>$50</td>
+        </tr>
+      </table>
+      <table>
+        <tr>
+          <th>Month</th>
+          <th>Savings</th>
+          <th>Spending</th>
+          <th>Remaining Balance</th>
+        </tr>
+        <tr>
+          <td>January</td>
+          <td>$100</td>
+          <td>$50</td>
+          <td>$150</td>
+        </tr>
+      </table>
       </section>
 
       <section>
@@ -166,14 +402,73 @@ Go buy <code>to purchase something</code> groceries!
           <li>Grilled Chicken</li>
         </ul>
         <ol>
-
+          <li>Mangos</li>
+          <li>Watermelon</li>
+          <li><a href="https://i5.walmartimages.com/asr/08d020f8-302e-4f8b-aec5-fce308e017c0_1.c83dafaa300ff5a6317c4e337cbf68f3.jpeg" id="groceries" class="bacon">Turkey Bacon</a></li>
+          <li>Bread</li>
         </ol>
+        <ul>
+          <li>Coffee</li>
+          <li>Tea
+            <ul>
+              <li>Peach tea</li>
+              <li>Green tea</li>
+            </ul>
+          </li>
+          <li>Milk</li>
+        </ul>
         <table>
-        <th>
-
-        </th>
+          <tr>
+            <th>Weekday</th>
+            <th>Homework</th>
+          </tr>
+          <tr>
+            <td>Monday</td>
+            <td>Write new vocab and definitions.</td>
+          </tr>
+          <tr>
+            <td>Tuesday</td>
+            <td>Work on problem set.</td>
+          </tr>
+          <tr>
+            <td>Wednesday</td>
+            <td>Write my midterm essay.</td>
+          </tr>
+          <tr>
+            <td>Thursday</td>
+            <td>Read chapter 6 for next class.</td>
+          </tr>
+          <tr>
+            <td>Friday</td>
+            <td>Go walk 2 miles on the track.</td>
+          </tr>
         </table>
-
+        <table>
+          <tr>
+            <th>Month</th>
+            <th>Savings</th>
+            <th>Spending</th>
+          </tr>
+          <tr>
+            <td>January</td>
+            <td>$100</td>
+            <td>$50</td>
+          </tr>
+        </table>
+        <table>
+          <tr>
+            <th>Month</th>
+            <th>Savings</th>
+            <th>Spending</th>
+            <th>Remaining Balance</th>
+          </tr>
+          <tr>
+            <td>January</td>
+            <td>$100</td>
+            <td>$50</td>
+            <td>$150</td>
+          </tr>
+        </table>
         </section>
 
         </html>
