--- a/basic-tags-styles.html
+++ b/basic-tags-styles.html
@@ -1,12 +1,23 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <h1>
 Daily Schedule
 </h1>
 <meta charset="UTF-8">
+<style>
+  h1   {color: blue;
+  background-color: aqua;
+  }
+  h2   {color: green;}
 
-<section id="Monday">
-<h2>
+.week {
+    border: 10px solid yellowgreen;}
+  p    {color: red;}
+  .pencils {color: purple;}
+  </style>
+<section class="week">
+<h2 id="head">
 Monday
 </h2>
 <p>Go to Biology class.</p>
@@ -16,7 +27,7 @@ Monday
 <img>
 <blockquote cite="https://www.agnesscott.edu/academics/majors-minors/index.html">
   <i>Agnes Scott</i> offers the following majors, minors and academic programs. Unless otherwise noted, majors result in a Bachelor of Arts degree.</blockquote>
-<pre>
+<pre class="pencils">
     Buy more <em>pencils</em> after work.
 </pre>
 
@@ -100,7 +111,7 @@ Go buy <code>to purchase something</code> groceries!
 </table>
 </section>
 
-<section id="Tuesday">
+<section class="week">
   <h2>
   Tuesday
   </h2>
@@ -109,7 +120,7 @@ Go buy <code>to purchase something</code> groceries!
   <img>
   <blockquote cite="https://www.agnesscott.edu/academics/majors-minors/index.html">
     <i>Agnes Scott</i> offers the following majors, minors and academic programs. Unless otherwise noted, majors result in a Bachelor of Arts degree.</blockquote>
-  <pre>
+  <pre class="pencils">
     Buy more <em>pencils</em> after work.
   </pre>
 
@@ -193,7 +204,7 @@ Go buy <code>to purchase something</code> groceries!
   </table>
   </section>
 
-  <section id="Wednesday">
+  <section class="week">
     <h2>
     Wednesday
     </h2>
@@ -202,7 +213,7 @@ Go buy <code>to purchase something</code> groceries!
     <img>
     <blockquote cite="https://www.agnesscott.edu/academics/majors-minors/index.html">
       <i>Agnes Scott</i> offers the following majors, minors and academic programs. Unless otherwise noted, majors result in a Bachelor of Arts degree.</blockquote>
-    <pre>
+    <pre class="pencils">
       Buy more<em>pencils</em> after work.
     </pre>
 
@@ -286,7 +297,7 @@ Go buy <code>to purchase something</code> groceries!
     </table>
     </section>
 
-    <section id="Thursday">
+    <section>
       <h2>
       Thursday
       </h2>
@@ -295,7 +306,7 @@ Go buy <code>to purchase something</code> groceries!
       <img>
       <blockquote cite="https://www.agnesscott.edu/academics/majors-minors/index.html">
         <i>Agnes Scott</i> offers the following majors, minors and academic programs. Unless otherwise noted, majors result in a Bachelor of Arts degree.</blockquote>
-      <pre>
+      <pre class="pencils">
         Buy more<em>pencils</em> after work.
       </pre>
 
@@ -379,7 +390,7 @@ Go buy <code>to purchase something</code> groceries!
       </table>
       </section>
 
-      <section id="Friday">
+      <section>
         <h2>
         Friday
         </h2>
@@ -388,7 +399,7 @@ Go buy <code>to purchase something</code> groceries!
         <img>
         <blockquote cite="https://www.agnesscott.edu/academics/majors-minors/index.html">
           <i>Agnes Scott</i> offers the following majors, minors and academic programs. Unless otherwise noted, majors result in a Bachelor of Arts degree.</blockquote>
-        <pre>
+        <pre class="pencils">
           Buy more<em>pencils</em> after work.
         </pre>
 
