--- a/index.html
+++ b/index.html
@@ -3,25 +3,31 @@
 
 <head>
 
-  <title>Traveling Suggestions!</title>
+  <title>Tool Guide for HTML and CSS by Mia!</title>
 <meta charset="UTF-8">
 </head>
 
 <body>
 
-  <h1> Traveling Suggestions!</h1>
+  <h1>Tool Guide for HTML and CSS by Mia!</h1>
 
-  <h2>Singapore</h2>
+  <p>In this website we will evaluate the tools in HTML and CSS that are needed to help build a website.</p>
+  <p>What will be included in our toolbox:</p>
+        <ul>
+            <li><a href="dev.html">Development Environment</a></li>
+            <li><a href="structure.html">Basic HTML Structure</a></li>
+            <li><a href="snippet.html">The Anatomy of an HTML Tag</a></li>
+            <li><a href="basic-tags.html">Basic Tags</a></li>
+            <li><a href="multimedia.html">Multimedia</a></li>
+            <li><a href="basic-css.html">Common CSS Properties</a></li>
+            <li><a href="basic-tags-styles.html">Styling a Page</a></li>
+        </ul>
 
-  <div class="singapore">
-    <img class="singapore_img" src="https://rccl-h.assetsadobe.com/is/image/content/dam/royal/ports-and-destinations/destinations/singapore/singapore-supertree-garden-by-the-bay-night.jpg?$750x667$" alt="place in singapore">
-  </div>
-
-  <h2>Jamaica</h2>
+        <p>Click on the first link to get started!</p>
 
 <div>
 
-  <a><img src="jamaica.jpg" alt="picture from the island" ></a>
+  <a><img src="toolbox.jpg" alt="picture of toolbox "></a>
 </div>
 
 
