--- a/structure.html
+++ b/structure.html
@@ -3,17 +3,30 @@
 
 <head>
 
-  <title>Hobbies</title>
+  <title>HTML Basics</title>
 
 </head>
 <body>
-  <h1>Outdoors hobby</h1>
+  <h1>HTML Fundamentals</h1>
+            <p>The &lt;!DOCTYPE html&gt; tag is required for every html page so that the web page is viewed in the same way, even in different browsers.</p>
+            <p>The &lt;html lang='en'&gt; tag is used to make sure that the page will be displaying html. The lang='en' part is to let the page know that the website is in english.</p><br>
+            <p>The &lt;head&gt; tag is used to include the title of your website and other items that aren't physically shown on the website itself.</p>
+            <pre>
+                The &lt;title&gt; tag is shown on the tab of the website like this:
+            </pre>
+            <img src="title.png">
 
-  <p>My favorite outdoor hobby is go-karting.</p>
+            <p>Anything that is put inside the &lt;body&gt; tag is displayed on the website.</p>
+            <p>The HTML fundamentals is shown in bold and a large font-size, known as the heading. This is accomplished through the &lt;h1&gt; tag.</p>
+            <p>The way you can describe all of these tags is done by using a paragraph which is represented by the &lt;p&gt; tags.</p>
+            <p> The higher you go in &lt;h&gt; tags, the smaller the heading becomes. Below is an example of a h2 header.</p>
 
-  <h2>Indoors hobby</h2>
+            <h2>This header is smaller than the first one!</h2>
 
-  <p>My favorite indoor hobby is playing basketball.</p>
+
+        <footer>
+            <p>source:<a href="https://www.w3schools.com/tags/default.asp">W3Schools Source!</a></p>
+        </footer>
 
 </body>
 
