--- a/basic-tags.html
+++ b/basic-tags.html
@@ -13,9 +13,11 @@ Monday
 
   <a href="https://www.agnesscott.edu/academics/majors-minors/index.html" id= "courses" class = "biology">Monday</a>
 
-<img>
+<p><b>Below is an example of the blockquote tag. The blockquote tag is used to cite a source for a quote that is being used in your website.</b></p>
+
 <blockquote cite="https://www.agnesscott.edu/academics/majors-minors/index.html">
   <i>Agnes Scott</i> offers the following majors, minors and academic programs. Unless otherwise noted, majors result in a Bachelor of Arts degree.</blockquote>
+  <a><img src="blockquote.PNG" alt="picture of blockquote "></a>
 <pre>
     Buy more <em>pencils</em> after work.
 </pre>
