--- a/snippet.html
+++ b/snippet.html
@@ -1,22 +1,26 @@
-<p>
-  Want to search the web?
-  Try <a href="https://google.com" id="the-best-link" class="banana"  target="_blank">Google</a>!
+<a><img src="snippet2.PNG" alt="picture of snippet "></a>
+
+<h1>HTML Tags</h1>
+
+<p>The tags in the snippet HTML above are: p and a.</p>
+
+<p>References:
+  <ul>
+<li><a href="https://www.w3docs.com/learn-html/html-p-tag.html">W3Schools P tag Reference!</a></li>
+<li><a href="https://www.w3schools.com/tags/tag_a.asp">W3Schools A tag Reference!</a></li>
+  </ul>
 </p>
 
-The tags in the snippet HTML above are: p and a.
+<p>The <i>a</i> tag is a child of the <i>p</i> tag. Whatever is put in the <i>p</i> tag is displayed on the site.</p>
 
-References:
-https://www.w3docs.com/learn-html/html-p-tag.html
-https://www.w3schools.com/tags/tag_a.asp
+<p>The opening <i>p</i> is to start the paragraph on the page. The closing <i>p</i> with the forward slash ends the paragraph on the page.</p>
 
-The a tag is a child of the p tag. Whatever is put in the p tag is displayed on the site.
+<p>The opening <i>a</i> is to start the process of adding a hyperlink on the page. The closing <i>a</i> with the forward slash ends the hyperlink process on the page.</p>
 
-The opening p is to start the paragraph on the page. The closing p with the forward slash ends the paragraph on the page.
+<h1>HTML Attributes</h1>
 
-The opening a is to start the process of adding a hyperlink on the page. The closing a with the forward slash ends the hyperlink process on the page.
+<p>The attribute names in the snippet HTML above are: <b>href, id, class, and target.</b></p>
 
-The attribute names in the snippet HTML above are: href, id, class, and target.
+<p>The value for the <b>class</b> attribute is banana. The value for the <b>href</b> attribute is https://google.com. The value for the <b>id</b> attribute is the-best-link. The value for the <b>target</b> attribute is _blank.</p>
 
-The value for the class attribute is banana. The value for the href attribute is https://google.com. The value for the id attribute is the-best-link. The value for the target attribute is _blank.
-
-The class attribute links to a class name in a stylesheet. The href attribute makes sure the URL of the page is linked to the site. The id attribute clarafies a the id for an element. The target attribute clarafies where to open the link or form.
+<p>The <b>class</b> attribute links to a class name in a stylesheet. The <b>href</b> attribute makes sure the URL of the page is linked to the site. The <b>id</b> attribute clarafies a the id for an element. The <b>target</b> attribute clarafies where to open the link or form.</p>
