--- a/multimedia.html
+++ b/multimedia.html
@@ -1,6 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Multimedia</title>
+</head>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/_EVlNhmTEPI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<body>
+<h1>Multimedia</h1>
+<h2>Using the <i>iframe</i> tag provided from youtubes embeded code I am going to embed a video on my site.</h2>
 
-    <audio controls>
-      <source src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3"></source>
-    </audio>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_EVlNhmTEPI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<h2>Using the <i>audio</i> tag I am going to embed a piece of audio on my site.</h2>
+
+<audio controls>
+<source src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3"></source>
+</audio>
