--- a/basic-tags-styles.html
+++ b/basic-tags-styles.html
@@ -1,145 +1,99 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<h1>
-Daily Schedule
-</h1>
-<meta charset="UTF-8">
-<style>
-  h1   {color: blue;
-  background-color: aqua;
-  }
-  h2   {color: green;}
+<head>
+<meta charset="UTF-8"/>
+<title>Basic Tags</title>
+</head>
 
-.week {
-    border: 10px solid yellowgreen;}
-  p    {color: red;}
-  .pencils {color: purple;}
-  </style>
-<section class="week">
-<h2 id="head">
-Monday
-</h2>
-<p>Go to Biology class.</p>
+<body>
+<h1>Styling a Page</h1>
+<p>This is a copy of the <b>basic-tags.html</b> except I added some CSS.</p>
 
-  <a href="https://www.agnesscott.edu/academics/majors-minors/index.html" id= "courses" class = "biology">Monday</a>
+<section id="schedule">
+  <p><b>Below is an example of a h2 tag. The h2 tag is used to display another header that is slightly smaller than the h1 tag header.</b></p>
 
-<img>
-<blockquote cite="https://www.agnesscott.edu/academics/majors-minors/index.html">
-  <i>Agnes Scott</i> offers the following majors, minors and academic programs. Unless otherwise noted, majors result in a Bachelor of Arts degree.</blockquote>
-<pre class="pencils">
-    Buy more <em>pencils</em> after work.
-</pre>
-
-<strong>
-Go buy <code>to purchase something</code> groceries!
-</strong>
-
-<ul>
-  <li>Apples <img class= "apples_img" src= "https://thumbor.forbes.com/thumbor/300x0/https%3A%2F%2Fblogs-images.forbes.com%2Fbethhoffman%2Ffiles%2F2012%2F04%2FApple-300x246.jpg" alt= "apples"> </li>
-  <li>Oranges</li>
-  <li>Spinach</li>
-  <li>Grilled Chicken</li>
-</ul>
-<ol>
-  <li>Mangos</li>
-  <li>Watermelon</li>
-  <li><a href="https://i5.walmartimages.com/asr/08d020f8-302e-4f8b-aec5-fce308e017c0_1.c83dafaa300ff5a6317c4e337cbf68f3.jpeg" id="groceries" class="bacon">Turkey Bacon</a></li>
-  <li>Bread</li>
-</ol>
-<ul>
-  <li>Coffee</li>
-  <li>Tea
-    <ul>
-      <li>Peach tea</li>
-      <li>Green tea</li>
-    </ul>
-  </li>
-  <li>Milk</li>
-</ul>
-<table>
-  <tr>
-    <th>Weekday</th>
-    <th>Homework</th>
-  </tr>
-  <tr>
-    <td>Monday</td>
-    <td>Write new vocab and definitions.</td>
-  </tr>
-  <tr>
-    <td>Tuesday</td>
-    <td>Work on problem set.</td>
-  </tr>
-  <tr>
-    <td>Wednesday</td>
-    <td>Write my midterm essay.</td>
-  </tr>
-  <tr>
-    <td>Thursday</td>
-    <td>Read chapter 6 for next class.</td>
-  </tr>
-  <tr>
-    <td>Friday</td>
-    <td>Go walk 2 miles on the track.</td>
-  </tr>
-</table>
-<table>
-  <tr>
-    <th>Month</th>
-    <th>Savings</th>
-    <th>Spending</th>
-  </tr>
-  <tr>
-    <td>January</td>
-    <td>$100</td>
-    <td>$50</td>
-  </tr>
-</table>
-<table>
-  <tr>
-    <th>Month</th>
-    <th>Savings</th>
-    <th>Spending</th>
-    <th>Remaining Balance</th>
-  </tr>
-  <tr>
-    <td>January</td>
-    <td>$100</td>
-    <td>$50</td>
-    <td>$150</td>
-  </tr>
-</table>
-</section>
-
-<section class="week">
   <h2>
-  Tuesday
+  Daily Schedule
   </h2>
-  <p>Go to Math class.</p>
-  <a href="https://www.agnesscott.edu/academics/majors-minors/index.html" id= "courses" class = "math">Tuesday</a>
-  <img>
+
+  <p><a><img src="daily.PNG" alt="picture of h2 tag "></a></p>
+  </section>
+
+
+  <section id="Monday">
+
+  <h2><b>Below is an example of the paragraph tag. The paragraph tag is used to display text on the website.</b></h2>
+
+  <p>Monday-Go to Biology class.</p>
+
+  <p><a><img src="paragraph.PNG" alt="picture of a paragraph "></a></p>
+  </section>
+
+  <section id="a">
+  <h2><b>Below is an example of the a tag. The a tag is used to display a hyperlinked text that will take the user to a different webpage.</b></h2>
+
+    <a href="https://www.agnesscott.edu/academics/majors-minors/index.html" id= "courses" class = "biology">Monday</a>
+
+    <p><a><img src="atag.PNG" alt="picture of a tag "></a></p>
+  </section>
+
+  <section id="blockquote">
+  <h2><b>Below is an example of the blockquote tag. The blockquote tag is used to cite a source for a quote that is being used in your website. Within the blockquote tag I have also included a i tag. The i tag is used to define a a piece of text in a different mood.</b></h2>
+
   <blockquote cite="https://www.agnesscott.edu/academics/majors-minors/index.html">
     <i>Agnes Scott</i> offers the following majors, minors and academic programs. Unless otherwise noted, majors result in a Bachelor of Arts degree.</blockquote>
-  <pre class="pencils">
-    Buy more <em>pencils</em> after work.
+    <a><img src="blockquote.PNG" alt="picture of blockquote "></a>
+  </section>
+
+  <section id="pre">
+  <h2><b>Below is an example of the pre tag. The pre tag is used to display a preformatted text on the website. Within the pre tag I have also included an em tag. The em tag is used to emphasize a piece of text.</b></h2>
+
+  <pre>
+      Buy more <em>pencils</em> after work.
   </pre>
+  <p><a><img src="pre.PNG" alt="picture of pre tag "></a></p>
+  </section>
+
+  <section id="strong">
+  <h2><b>Below is an example of the strong tag. The strong tag is used to define important text. The b tag can also do the same function as the strong tag. Within this example I have also used the code tag. The code tag is used to define a piece of text that has been coded.</b></h2>
 
   <strong>
-    Go buy <code>to purchase something</code> groceries!
+  Go buy <code>to purchase something</code> groceries!
   </strong>
 
+  <p><a><img src="strong.PNG" alt="picture of strong tag "></a></p>
+  </section>
+
+  <section id="ul">
+  <h2><b>Below is an example of the ul tag. The ul tag is used to display an unordered list on the website. Within this ul I have also included a img tag. The img tag helps define an image on the website.</b></h2>
+
   <ul>
-    <li>Apples <img class= "apples_img" src= "https://thumbor.forbes.com/thumbor/300x0/https%3A%2F%2Fblogs-images.forbes.com%2Fbethhoffman%2Ffiles%2F2012%2F04%2FApple-300x246.jpg" alt= "apples"></li>
+    <li>Apples <img class= "apples-img" src= "https://thumbor.forbes.com/thumbor/300x0/https%3A%2F%2Fblogs-images.forbes.com%2Fbethhoffman%2Ffiles%2F2012%2F04%2FApple-300x246.jpg" alt= "apples"> </li>
     <li>Oranges</li>
     <li>Spinach</li>
     <li>Grilled Chicken</li>
   </ul>
+
+  <p><a><img src="ul.PNG" alt="picture of ul tag "></a></p>
+  </section>
+
+  <section id="ol">
+  <h2><b>Below is an example of the ol tag. The ol tag is used to display an ordered list on the website. Within this ol I have inserted another hyperlink with the a tag.</b></h2>
+
   <ol>
     <li>Mangos</li>
     <li>Watermelon</li>
     <li><a href="https://i5.walmartimages.com/asr/08d020f8-302e-4f8b-aec5-fce308e017c0_1.c83dafaa300ff5a6317c4e337cbf68f3.jpeg" id="groceries" class="bacon">Turkey Bacon</a></li>
     <li>Bread</li>
   </ol>
+
+  <p><a><img src="ol.PNG" alt="picture of ol tag "></a></p>
+  </section>
+
+  <section id="nest">
+  <h2><b>Below is another example of a unordered list but I have now nested another unordered list within another one.</b></h2>
+
   <ul>
     <li>Coffee</li>
     <li>Tea
@@ -150,6 +104,13 @@ Go buy <code>to purchase something</code> groceries!
     </li>
     <li>Milk</li>
   </ul>
+
+  <p><a><img src="nest.PNG" alt="picture of a nested list "></a></p>
+  </section>
+
+  <section id="table">
+  <h2><b>Below is an example of the table tag. The table tag is used to create a text table on the website. The th tag is used for the table headinngs. The tr tag is used to define a row in the table. The td tag is used to define a cell in the table.</b></h2>
+
   <table>
     <tr>
       <th>Weekday</th>
@@ -176,6 +137,13 @@ Go buy <code>to purchase something</code> groceries!
       <td>Go walk 2 miles on the track.</td>
     </tr>
   </table>
+
+  <p><a><img src="table.PNG" alt="picture of table tag "></a></p>
+  </section>
+
+  <section id="table2">
+  <h2><b>Below is a 3x2 example of a table.</b></h2>
+
   <table>
     <tr>
       <th>Month</th>
@@ -188,6 +156,11 @@ Go buy <code>to purchase something</code> groceries!
       <td>$50</td>
     </tr>
   </table>
+  </section>
+
+  <section id="table3">
+  <h2><b>Below is a 4x2 example of a table.</b></h2>
+
   <table>
     <tr>
       <th>Month</th>
@@ -203,284 +176,35 @@ Go buy <code>to purchase something</code> groceries!
     </tr>
   </table>
   </section>
-
-  <section class="week">
-    <h2>
-    Wednesday
-    </h2>
-    <p>Go to English class.</p>
-    <a href="https://www.agnesscott.edu/academics/majors-minors/index.html" id= "courses" class = "english">Wednesday</a>
-    <img>
-    <blockquote cite="https://www.agnesscott.edu/academics/majors-minors/index.html">
-      <i>Agnes Scott</i> offers the following majors, minors and academic programs. Unless otherwise noted, majors result in a Bachelor of Arts degree.</blockquote>
-    <pre class="pencils">
-      Buy more<em>pencils</em> after work.
-    </pre>
-
-    <strong>
-      Go buy <code>to purchase something</code> groceries!
-    </strong>
-
-    <ul>
-      <li>Apples <img class= "apples_img" src= "https://thumbor.forbes.com/thumbor/300x0/https%3A%2F%2Fblogs-images.forbes.com%2Fbethhoffman%2Ffiles%2F2012%2F04%2FApple-300x246.jpg" alt= "apples"></li>
-      <li>Oranges</li>
-      <li>Spinach</li>
-      <li>Grilled Chicken</li>
-    </ul>
-    <ol>
-      <li>Mangos</li>
-      <li>Watermelon</li>
-      <li><a href="https://i5.walmartimages.com/asr/08d020f8-302e-4f8b-aec5-fce308e017c0_1.c83dafaa300ff5a6317c4e337cbf68f3.jpeg" id="groceries" class="bacon">Turkey Bacon</a></li>
-      <li>Bread</li>
-    </ol>
-    <ul>
-      <li>Coffee</li>
-      <li>Tea
-        <ul>
-          <li>Peach tea</li>
-          <li>Green tea</li>
-        </ul>
-      </li>
-      <li>Milk</li>
-    </ul>
-    <table>
-      <tr>
-        <th>Weekday</th>
-        <th>Homework</th>
-      </tr>
-      <tr>
-        <td>Monday</td>
-        <td>Write new vocab and definitions.</td>
-      </tr>
-      <tr>
-        <td>Tuesday</td>
-        <td>Work on problem set.</td>
-      </tr>
-      <tr>
-        <td>Wednesday</td>
-        <td>Write my midterm essay.</td>
-      </tr>
-      <tr>
-        <td>Thursday</td>
-        <td>Read chapter 6 for next class.</td>
-      </tr>
-      <tr>
-        <td>Friday</td>
-        <td>Go walk 2 miles on the track.</td>
-      </tr>
-    </table>
-    <table>
-      <tr>
-        <th>Month</th>
-        <th>Savings</th>
-        <th>Spending</th>
-      </tr>
-      <tr>
-        <td>January</td>
-        <td>$100</td>
-        <td>$50</td>
-      </tr>
-    </table>
-    <table>
-      <tr>
-        <th>Month</th>
-        <th>Savings</th>
-        <th>Spending</th>
-        <th>Remaining Balance</th>
-      </tr>
-      <tr>
-        <td>January</td>
-        <td>$100</td>
-        <td>$50</td>
-        <td>$150</td>
-      </tr>
-    </table>
-    </section>
-
-    <section>
-      <h2>
-      Thursday
-      </h2>
-      <p>Go to History class.</p>
-      <a href="https://www.agnesscott.edu/academics/majors-minors/index.html" id= "courses" class = "history">Thursday</a>
-      <img>
-      <blockquote cite="https://www.agnesscott.edu/academics/majors-minors/index.html">
-        <i>Agnes Scott</i> offers the following majors, minors and academic programs. Unless otherwise noted, majors result in a Bachelor of Arts degree.</blockquote>
-      <pre class="pencils">
-        Buy more<em>pencils</em> after work.
-      </pre>
-
-      <strong>
-        Go buy <code>to purchase something</code> groceries!
-      </strong>
-
-      <ul>
-        <li>Apples <img class= "apples_img" src= "https://thumbor.forbes.com/thumbor/300x0/https%3A%2F%2Fblogs-images.forbes.com%2Fbethhoffman%2Ffiles%2F2012%2F04%2FApple-300x246.jpg" alt= "apples"> </li>
-        <li>Oranges</li>
-        <li>Spinach</li>
-        <li>Grilled Chicken</li>
-      </ul>
-      <ol>
-        <li>Mangos</li>
-        <li>Watermelon</li>
-        <li><a href="https://i5.walmartimages.com/asr/08d020f8-302e-4f8b-aec5-fce308e017c0_1.c83dafaa300ff5a6317c4e337cbf68f3.jpeg" id="groceries" class="bacon">Turkey Bacon</a></li>
-        <li>Bread</li>
-      </ol>
-      <ul>
-        <li>Coffee</li>
-        <li>Tea
-          <ul>
-            <li>Peach tea</li>
-            <li>Green tea</li>
-          </ul>
-        </li>
-        <li>Milk</li>
-      </ul>
-      <table>
-        <tr>
-          <th>Weekday</th>
-          <th>Homework</th>
-        </tr>
-        <tr>
-          <td>Monday</td>
-          <td>Write new vocab and definitions.</td>
-        </tr>
-        <tr>
-          <td>Tuesday</td>
-          <td>Work on problem set.</td>
-        </tr>
-        <tr>
-          <td>Wednesday</td>
-          <td>Write my midterm essay.</td>
-        </tr>
-        <tr>
-          <td>Thursday</td>
-          <td>Read chapter 6 for next class.</td>
-        </tr>
-        <tr>
-          <td>Friday</td>
-          <td>Go walk 2 miles on the track.</td>
-        </tr>
-      </table>
-      <table>
-        <tr>
-          <th>Month</th>
-          <th>Savings</th>
-          <th>Spending</th>
-        </tr>
-        <tr>
-          <td>January</td>
-          <td>$100</td>
-          <td>$50</td>
-        </tr>
-      </table>
-      <table>
-        <tr>
-          <th>Month</th>
-          <th>Savings</th>
-          <th>Spending</th>
-          <th>Remaining Balance</th>
-        </tr>
-        <tr>
-          <td>January</td>
-          <td>$100</td>
-          <td>$50</td>
-          <td>$150</td>
-        </tr>
-      </table>
-      </section>
-
-      <section>
-        <h2>
-        Friday
-        </h2>
-        <p>Go to Gym class.</p>
-        <a href="https://www.agnesscott.edu/academics/majors-minors/index.html" id= "courses" class = "gym">Friday</a>
-        <img>
-        <blockquote cite="https://www.agnesscott.edu/academics/majors-minors/index.html">
-          <i>Agnes Scott</i> offers the following majors, minors and academic programs. Unless otherwise noted, majors result in a Bachelor of Arts degree.</blockquote>
-        <pre class="pencils">
-          Buy more<em>pencils</em> after work.
-        </pre>
-
-        <strong>
-          Go buy <code>to purchase something</code> groceries!
-        </strong>
-
-        <ul>
-          <li>Apples <img class= "apples_img" src= "https://thumbor.forbes.com/thumbor/300x0/https%3A%2F%2Fblogs-images.forbes.com%2Fbethhoffman%2Ffiles%2F2012%2F04%2FApple-300x246.jpg" alt= "apples"> </li>
-          <li>Oranges</li>
-          <li>Spinach</li>
-          <li>Grilled Chicken</li>
-        </ul>
-        <ol>
-          <li>Mangos</li>
-          <li>Watermelon</li>
-          <li><a href="https://i5.walmartimages.com/asr/08d020f8-302e-4f8b-aec5-fce308e017c0_1.c83dafaa300ff5a6317c4e337cbf68f3.jpeg" id="groceries" class="bacon">Turkey Bacon</a></li>
-          <li>Bread</li>
-        </ol>
-        <ul>
-          <li>Coffee</li>
-          <li>Tea
-            <ul>
-              <li>Peach tea</li>
-              <li>Green tea</li>
-            </ul>
-          </li>
-          <li>Milk</li>
-        </ul>
-        <table>
-          <tr>
-            <th>Weekday</th>
-            <th>Homework</th>
-          </tr>
-          <tr>
-            <td>Monday</td>
-            <td>Write new vocab and definitions.</td>
-          </tr>
-          <tr>
-            <td>Tuesday</td>
-            <td>Work on problem set.</td>
-          </tr>
-          <tr>
-            <td>Wednesday</td>
-            <td>Write my midterm essay.</td>
-          </tr>
-          <tr>
-            <td>Thursday</td>
-            <td>Read chapter 6 for next class.</td>
-          </tr>
-          <tr>
-            <td>Friday</td>
-            <td>Go walk 2 miles on the track.</td>
-          </tr>
-        </table>
-        <table>
-          <tr>
-            <th>Month</th>
-            <th>Savings</th>
-            <th>Spending</th>
-          </tr>
-          <tr>
-            <td>January</td>
-            <td>$100</td>
-            <td>$50</td>
-          </tr>
-        </table>
-        <table>
-          <tr>
-            <th>Month</th>
-            <th>Savings</th>
-            <th>Spending</th>
-            <th>Remaining Balance</th>
-          </tr>
-          <tr>
-            <td>January</td>
-            <td>$100</td>
-            <td>$50</td>
-            <td>$150</td>
-          </tr>
-        </table>
-        </section>
-
-        </html>
+  <style>
+body{
+background-color: aqua;
+}
+#table {
+border: dashed;
+border-color: blueviolet;
+}
+#table2 {
+border:double;
+border-color: blueviolet;
+}
+#table3 {
+border: dotted;
+border-color: blueviolet;
+}
+h2 {
+color: coral;
+}
+i {
+color: darkmagenta;
+}
+.apples-img {
+width: 250px;
+height: 250px;
+}
+ul > li {
+color: darkgoldenrod;
+}
+  </style>
+  </body>
+  </html>
