--- a/structure.html
+++ b/structure.html
@@ -14,7 +14,7 @@
             <pre>
                 The &lt;title&gt; tag is shown on the tab of the website like this:
             </pre>
-            <img src="title.png" alt="title">
+            <a><img src="title.png" alt="title"></a>
 
             <p>Anything that is put inside the &lt;body&gt; tag is displayed on the website.</p>
             <p>The HTML fundamentals is shown in bold and a large font-size, known as the heading. This is accomplished through the &lt;h1&gt; tag.</p>
